6-anthos-install/acm-repos/root-config-repo/namespaces/boa/accounts/allow-accounts-sql-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# accounts DB sql-boa-use1-01
metadata:
  name: allow-sql
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 3307
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 172.31.0.2/32
    - ipBlock:
        cidr: 172.31.2.13/32
    - ipBlock:
        cidr: 172.31.2.4/32
    - ipBlock:
        cidr: 172.31.2.8/32
    - ipBlock:
        cidr: 10.16.64.0/24
    ports:
    - port: 3307
