6-anthos-install/acm-repos/root-config-repo/namespaces/boa/accounts/allow-front-accounts-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          networking/namespace: frontend
          app: boa
